--- a/src/pug/1-5news-inner.pug
+++ b/src/pug/1-5news-inner.pug
@@ -56,5 +56,5 @@ block content
 						+link-more('Вернуться назад', 'back-link')
 		.main-news.main-news_bt.fade-down
 			.main-news__wrap
-				+news-item('news-1.jpg', '«Классика у Ратуши с velcom» подарила минчанам фотовыставку с лучшими моментами фестиваля', '25 августа 2017', 'news-index')
-				+news-item('news-2.jpg', '#velcombegom: минские бегуны впервые проведут 24-часовую эстафету-марафон', '23 августа 2017', 'news-index')
+				+news-item('news-1.jpg', '«Классика у Ратуши с velcom» подарила минчанам фотовыставку с лучшими моментами фестиваля', '25 августа 2017', 'news-index', 'Сми о нас')
+				+news-item('news-2.jpg', '#velcombegom: минские бегуны впервые проведут 24-часовую эстафету-марафон', '23 августа 2017', 'news-index', 'События')
