--- a/src/pug/1-6gallery-inner.pug
+++ b/src/pug/1-6gallery-inner.pug
@@ -26,10 +26,10 @@ block content
 							+icon('arrow_down')
 					+link-navigation(['Команда', 'Документация', 'Сертификаты', 'Инфраструктура', 'Новости', 'Галерея'])
 			.content-inner
-				.content-inner-group.fade-down
-					h2.h2 Правила оферты
+				.gallery-inner.fade-down
+					h2.h2 Новый сервер
 					p.text-primary 18 фото
-					.gallery-inner
+					.gallery
 						+gallery-photo('gallery-photo-1.jpg', 0)
 						+gallery-photo('gallery-photo-2.jpg', 1)
 						+gallery-photo('gallery-photo-3.jpg', 2)
