--- a/src/pug/5-1project-inner.pug
+++ b/src/pug/5-1project-inner.pug
@@ -51,7 +51,8 @@ block content
 						h3 Наше решение
 						p Современные требования к ИТ-инфраструктуре предполагают максимальную доступность данных для операционной деятельности любого бизнеса практически в любой точке мира, что обусловлено виртуализацией ИТ-решений, которая многократно повышает скорость, масштаб и экономическую выгоду для предприятий.
 						hr
-						h3 Результат
+						h3
+							span Результат
 							+link-more('Смотреть все фото','title-link')
 						.inner-slider
 							.inner-slider-init
