--- a/src/pug/etalon.pug
+++ b/src/pug/etalon.pug
@@ -153,8 +153,11 @@ block content
 							|, и консультант свяжется с вами для разработки индивидуального предложения
 					hr
 					h3 Отзывы клиента
-					blockquote
-						i Дата-цент Velcom сыграл решающую роль в нашем процессе оптимизации работ.
-						span Вишневский Григорий Михайлович
+					.feedback
+						.feedback__img
+							img(src="img/blanck.jpg", alt="blanck")
+						blockquote
+							i Дата-цент Velcom сыграл решающую роль в нашем процессе оптимизации работ.
+							span Вишневский Григорий Михайлович
 					.content-area-footer
 						+link-more('Вернуться назад', 'back-link')
