--- a/src/pug/includes/_modals.pug
+++ b/src/pug/includes/_modals.pug
@@ -3,11 +3,6 @@ include _mixins.pug
 
 .modal-layout(data-modal='popup-contents').js-popup-container
 
-
-//- .modal-layout(data-modal='gallery-photo').js-popup-container
-//- 	.modal-container.gallery-modal
-//- 		.pop-close.closePopup CLOSE
-
 .modal-layout(data-modal='modal-menu').js-popup-container
 	.modal-container.modal-menu
 		.pop-close.closePopup
@@ -70,7 +65,7 @@ include _mixins.pug
 			form(action="#").js-validate
 				.form-block
 					.form-block__head
-						.h2.form-block__title Получить консультацию
+						.h2.form-block__title Заявка в техподдержку
 					.form-block__body
 						.form-content
 							.form-content-head Контактные данные
