--- a/src/sass/_modal.sass
+++ b/src/sass/_modal.sass
@@ -1,4 +1,11 @@
 /* modal */
+.pop-close
+	width: 25px
+	height: 25px
+	color: #000000
+	display: inline-block
+	padding: 5px
+	box-sizing: content-box
 
 .modal-layout
 	position: fixed
@@ -21,7 +28,7 @@
 	contain: paint 
 	overflow-y: auto
 	&.active
-		background: rgba(0,0,0, .3)
+		background: rgba(0,0,0, .6)
 		visibility: visible
 		opacity: 1
 		transition-delay: 0s
@@ -39,12 +46,11 @@
 			transform: translateX(0)
 			opacity: 1
 .modal-container
-	margin-top: 50px
-	margin-bottom: 50px
+	margin-top: 60px
+	margin-bottom: 60px
 	display: inline-block
 	// vertical-align: middle
 	text-align: left
-	+rem(min-width,320px)
 	width: auto
 	background-color: #ffffff
 	position: relative
@@ -57,13 +63,11 @@
 		position: relative
 		.pop-close
 			display: block
-			width: 19px
-			height: 19px
 			padding: 10px
 			box-sizing: content-box
 			color: #000000
 			position: absolute
-			right: 20px
+			right: 25px
 			top: 20px
 			z-index: 20
 			+tr(all .5s ease)
@@ -80,6 +84,7 @@
 	animation-fill-mode: forwards
 	+r(768)
 		margin-top: 0
+		max-width: 100%
 
 @keyframes show
 	0%
@@ -126,21 +131,21 @@
 	& .pop-close
 		color: #ffffff
 		position: absolute
-		right: -40px
-		top: -40px
+		right: -50px
+		top: -50px
 		+tr(transform .5s ease)
 		+r(850)
-			right: 0
-			top: -30px
+			right: 0px
+			top: -50px
+			padding-right: 0
 		&:hover
-			transform: rotate(180deg)
+			transform: rotate(90deg)
 	&__nav 
 		position: absolute
+		z-index: 10
 		width: 100%
 		top: 50%
 		left: 0
-		height: 1px
-		background: red
 		+r(850)
 			top: auto
 			bottom: 50px
@@ -150,6 +155,7 @@
 		width: 35px
 		height: 65px
 		position: absolute
+		z-index: 10
 		top: 50%
 		+tr(opacity .3s ease)
 		+r(850)
@@ -168,7 +174,7 @@
 			left: 10px
 	&__next.slick-disabled,
 	&__prev.slick-disabled,
-		opacity: .5
+		opacity: .3
 	& .modal-container-content
 		padding: 0 50px 40px 50px
 
@@ -245,12 +251,10 @@
 		align-items: flex-start
 	.pop-close
 		display: block
-		width: 20px
-		height: 20px
 		color: #000000
 		position: absolute
 		top: 20px
-		right: 20px
+		right: 35px
 		+tr(all .5s ease)
 		&:hover
 			cursor: pointer
