--- a/src/sass/_inputs.sass
+++ b/src/sass/_inputs.sass
@@ -12,6 +12,8 @@
 		background-color: #eeeeee
 	&__title
 		margin-bottom: 20px
+		width: 100%
+		max-width: 90%
 .form-content
 	.form-content-head
 		font-size: 16px
@@ -339,17 +341,11 @@
 			+tr(all .3s ease)
 	+r(768)
 		&-wrapper
-			border-top-left-radius: 5px
-			border-bottom-left-radius: 5px
-			border-top-right-radius: 5px
-			border-bottom-right-radius: 5px
+			border-radius: 5px
 			margin-right: 10px
 			margin-bottom: 10px
 			.radio-label
-				border-top-left-radius: 5px
-				border-bottom-left-radius: 5px
-				border-top-right-radius: 5px
-				border-bottom-right-radius: 5px
+				border-radius: 5px
 					
 .check-label
 	display: inline-block
