--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -153,7 +153,7 @@ body
 			padding-bottom: 20px
 		&_col
 			width: 50%
-			padding: 20px 20px 20px 150px
+			padding: 20px 40px 20px 150px
 			box-sizing: content-box
 		a
 			margin-top: 70px
@@ -195,10 +195,15 @@ body
 				margin-top: 35px
 			&_col
 				padding-left: 0
+				padding-right: 0
 		&__desc
 			&_col
 				padding-left: 0
 				padding-right: 0
+		&_row
+			padding: 40px 0
+		&_inner-page
+			padding: 130px 0 40px
 .promo-reclame
 	margin-bottom: 0
 	margin-top: auto
@@ -296,7 +301,7 @@ body
 			left: 20px
 	&__prev.slick-disabled,
 	&__next.slick-disabled
-		opacity: .4
+		opacity: .3
 	&__dots
 		position: absolute
 		left: 0
@@ -496,7 +501,7 @@ body
 	&__more-news
 		+rm(620)
 			position: absolute
-			right: 0
+			right: 16px
 			top: 13px
 	&__title
 		display: flex
@@ -864,9 +869,13 @@ body
 	margin-bottom: -70px
 
 .gallery-inner
-	display: flex
-	flex-wrap: wrap
 	margin-bottom: -50px
+	.h2, h2
+		margin-bottom: 14px
+	.gallery
+		margin-top: 50px
+		margin-bottom: 0
+		justify-content: flex-start
 	+r(980)
 		margin-bottom: -30px
 	+r(440)
@@ -950,7 +959,7 @@ body
 		font-weight:bold
 	+r(768)
 		margin-bottom: 20px
-		&__title
+		&__title, &__count
 			font-size: 16px
 			line-height: 1.5
 		&__description
@@ -988,11 +997,15 @@ body
 	+r(768)
 		flex-direction: column
 		&__img
-			width: 60%
+			width: auto
+			max-width: 50%
 			margin-bottom: 38px
 		blockquote
 			width: 100%
-	
+	+r(768)
+		&__img
+				width: auto
+				max-width: 90%
 .projects-head
 	&__title
 		padding-bottom: 75px
@@ -1016,14 +1029,12 @@ body
 	margin-bottom: 40px
 	+r(620)
 		flex-wrap: wrap
+		margin-bottom: 25px
 	&__form
 		display: flex
 		+r(620)
 			width: 100%
 			margin-top: 20px
-		+r(480)
-			flex-wrap: wrap
-			justify-content: flex-end
 	&__title
 		font-size: 20px
 
@@ -1045,7 +1056,6 @@ body
 		margin-left: 16px
 	+r(480)
 		width: 48%
-		margin-right: 2%
 		margin-bottom: 16px
 		&:last-child
 			margin-right: 0
@@ -1262,6 +1272,7 @@ body
 				padding-left: 0
 	&.active
 		box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.2)
+		background-color: #ffffff
 		.accordeon-head 
 			&-icon
 				span
@@ -1459,10 +1470,13 @@ body
 	&__title
 		display: flex
 		justify-content: space-between
+		flex-wrap: wrap
 		align-items: center
 		padding-bottom: 60px
 		border-bottom: 1px solid #cccccc
 		margin-bottom: 55px
+		+r(620)
+			padding-bottom: 40px
 
 .contacts-wrap
 	display: flex
